[package]
name = "tudu"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
humantime = "2.2.0"
humantime-serde = "1.1.1"
log = "0.4.27"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
